[package]
name = "die-exit"
version = "0.4.0"
authors = [
  "moparisthebest <admin@moparisthebest.com>",
  "Xavientois <joshua.rampersad@hotmail.com>",
]
description = "Handle errors and exit in command line programs easily."
repository = "https://github.com/Xavientois/die"
keywords = ["die", "stderr", "cmd", "cmdline", "exit"]
categories = ["command-line-utilities"]
license = "MIT"

[features]
test = []
